hphp/test/slow/rx/multiple_reactivity3.php.expectf
Fatal error: Multiple __Rx, __RxShallow, or __RxLocal annotations are not allowed. in %s/test/slow/rx/multiple_reactivity3.php on line 4
